<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ahbap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up!</string>
    <string name="Name">Ad</string>
    <string name="lastName">Soyad</string>
    <string name="tryAgain">Error Occurred While Connectting Server !</string>
    <string name="emptyField">Check Fields !</string>
    <string name="activate">Ahbap Activation</string>
    <string name="returnApp">Return</string>
    <string name="badEmail">Check Your Email!</string>
	<string name="emailError">Error Occurred While Sending Email !</string>
	<string name="exit">Cikis</string>
	<string name="image">Profil Resmi Sec</string>
	<string name="change">Degistir</string>
	<string name="location">Konum Guncelle</string>
	<string name="detail">Kisisel Bilgiler</string>
	<string name="enlem">Enlem</string>
	<string name="boylam">Boylam</string>
	<string name="sehir">Sehir</string>
	<string name="ulke">Ulke</string>
	<string name="konumBilgileri">Konum Bilgileri</string>
	<string name="dogumTarihi">Dogum Tarihi</string>
	<string name="kaydet">Kaydet</string>
	<string name="EducationFind">Egitim Özellikleri</string>
	<string name="GenderFind">Cinsiyet Özellikleri</string>
	<string name="CountryFind">Ulke Seciniz</string>
	<string name="CityFind">Sehir Seciniz</string>
</resources>
