<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation = "vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFFFFF"
  android:padding="10dip">
  <RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<ImageView
  		android:id="@+id/profil_image"
  	  	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:src="@drawable/icon"
  	/>
  	<Button
  		android:id="@+id/degistir0"
  	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:text="@string/image"
	  	android:layout_toRightOf="@id/profil_image"
	  	android:gravity="right"
  	/>
  	</RelativeLayout>
   	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/Name"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText2"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText"
  		android:text="deneme"
  	/>
  	<Button
  		android:id="@+id/degistir"
  	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:layout_alignParentRight="true"
	  	android:background="@drawable/edit_icon"	  
  	/>
  	</RelativeLayout>
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText3"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/lastName"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText4"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText3"
  		android:text="deneme"
  	/>
  	<Button
  		android:id="@+id/degistir2"
  	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:layout_alignParentRight="true"
	  	android:background="@drawable/edit_icon"	  
  	/>
  	</RelativeLayout>
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText5"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/email"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText6"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText5"
  		android:text="deneme"
  	/>
  	<Button
  		android:id="@+id/degistir3"
  	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:layout_alignParentRight="true"	
	  	android:background="@drawable/edit_icon"  
  	/>
  	</RelativeLayout>
  	<Button
  		android:id="@+id/kullaniciDetay"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/detail"
  		android:paddingTop="10dip"
  	/>
  	<Button
  		android:id="@+id/konum"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/location"
  		android:paddingTop="10dip"
  	/>
</LinearLayout>
